add var env testing multi module structure
