# src/app.js
@@ -1,42 +1,28 @@
+// app.js
 const express = require('express');
 const helmet = require('helmet');
 const swaggerUi = require('swagger-ui-express');
 const YAML = require('yamljs');
 const swaggerDocument = YAML.load('./src/swagger.yaml');
-const validateArithmeticInputs = require('./middlewares/arithmeticMiddleware');
+const calculatorRoutes = require('./routes/calculatorRoutes');
+const userRoutes = require('./routes/userRoutes');
 const app = express();
+const dotenv = require('dotenv'); // Import dotenv library
+
+// Load environment variables from .env file
+dotenv.config();
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-
 app.use(helmet());
 app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
 
-
+// Welcome route
 app.get('/', (req, res) => {
   res.send('Welcome to the Calculator API. Visit <a href="/api-docs">API Documentation</a> to know more about the available operations.');
 });
 
-
-app.post('/add', validateArithmeticInputs, (req, res) => {
-  const { a, b } = req.body;
-  res.json({ result: a + b });
-});
-
-app.post('/subtract', validateArithmeticInputs, (req, res) => {
-  const { a, b } = req.body;
-  res.json({ result: a - b });
-});
-
-app.post('/multiply', validateArithmeticInputs, (req, res) => {
-  const { a, b } = req.body;
-  res.json({ result: a * b });
-});
-
-
-app.post('/divide', validateArithmeticInputs, (req, res) => {
-  const { a, b } = req.body;
-  res.json({ result: a / b });
-});
-
+// Parent API route
+app.use('/api/v1/calculator', calculatorRoutes);
+app.use('/users', userRoutes);
 module.exports = app;
